# ProjectTrench

./: .env.example  .env.template  .gitignore  AI_INTEGRATION_GUIDE.md  AI_INTEGRATION_GUIDE.md.backup_20250801_214535  AI_INTEGRATION_GUIDE.md.backup_20250801_234437  AI_INTEGRATION_GUIDE.md.backup_20250802_021759  AI_INTEGRATION_GUIDE.md.backup_20250802_135448  AI_INTEGRATION_GUIDE.md.backup_20250802_165928  API_INTEGRATION_COMPLETE.md  API_INTEGRATION_DOCUMENTATION.md  API_INTEGRATION_MILESTONE.md  API_INTEGRATION_STATUS.json  API_MILESTONE_SUMMARY.json  ARCHITECTURE.md  AUTO_DEPLOY_SETUP_COMPLETE.md  AUTO_DEPLOY_SETUP_COMPLETE.md.backup_20250801_232658  AUTO_DEPLOY_SETUP_COMPLETE.md.backup_20250801_234437  AUTO_DEPLOY_SETUP_COMPLETE.md.backup_20250802_021759  AUTO_DEPLOY_SETUP_COMPLETE.md.backup_20250802_135448  AUTO_DEPLOY_SETUP_COMPLETE.md.backup_20250802_164218  BLOG_DISCORD_INTEGRATION_COMPLETE.md  BLOG_SIMULATION_GOTCHAS.md  BLOG_SYSTEM_COMPLETE_FIX.md  BLOG_SYSTEM_FIXES_COMPLETE.md  BLOG_SYSTEM_SOLUTION.md  BUG_FIX_SYSTEM_GUIDE.md  BUG_FIX_SYSTEM_GUIDE.md.backup_20250801_232658  BUG_FIX_SYSTEM_GUIDE.md.backup_20250801_234437  BUG_FIX_SYSTEM_GUIDE.md.backup_20250802_003013  BUG_FIX_SYSTEM_GUIDE.md.backup_20250802_021759  BUG_FIX_SYSTEM_GUIDE.md.backup_20250802_025247  BUG_FIX_SYSTEM_GUIDE.md.backup_20250802_132659  BUG_FIX_SYSTEM_GUIDE.md.backup_20250802_161847  CLAUDE.md  CLAUDE.md.backup_20250801_232847  CLAUDE.md.backup_20250801_234437  CLAUDE.md.backup_20250802_003013  CLAUDE.md.backup_20250802_021759  CLAUDE.md.backup_20250802_025246  (+678 more)
.claude/: settings.local.json
data/: trench.db
(+104 files in other folders)
