[tool.poetry]
name = "trenchcoat-pro"
version = "2.3.0"
description = "Ultra-premium cryptocurrency trading intelligence platform"
authors = ["TrenchCoat Pro Team <admin@trenchcoat.pro>"]
readme = "README.md"
homepage = "https://trenchcoat.pro"
repository = "https://github.com/JLORep/ProjectTrench"
keywords = ["cryptocurrency", "trading", "solana", "defi", "memecoin"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.32.0"
pandas = "^2.0.3"
numpy = "^1.24.4"
plotly = "^5.17.0"
requests = "^2.31.0"
aiohttp = "^3.12.15"
aiohappyeyeballs = "^2.6.1"
aiosignal = "^1.4.0"
frozenlist = "^1.7.0"
multidict = "^6.6.3"
yarl = "^1.20.1"
base58 = "^2.1.1"
psutil = "^5.9.5"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pre-commit = "^3.3.3"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]